Jann 30/objects/GS1_BBN__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BBNSuccessiveNumber__c</fullName>
        <label>BBN Successive Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Dsp__c</fullName>
        <formula>IF(ISNUMBER(Code__c),VALUE(Code__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBN Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>BBN Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flavour_Dsp__c</fullName>
        <formula>Flavour__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flavour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flavour__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flavour</label>
        <referenceTo>GS1_Flavour__c</referenceTo>
        <relationshipLabel>BBNs</relationshipLabel>
        <relationshipName>BBN_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trademark_Dsp__c</fullName>
        <formula>Trademark__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trademark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trademark__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trademark</label>
        <referenceTo>GS1_Trademark__c</referenceTo>
        <relationshipLabel>BBNs</relationshipLabel>
        <relationshipName>BBN_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <formula>Name +  &apos;~&apos; + Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKey</label>
        <type>Text</type>
    </fields>
    <label>GS1 BBN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_Dsp__c</columns>
        <columns>BBNSuccessiveNumber__c</columns>
        <columns>Flavour__c</columns>
        <columns>Trademark__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Active_BBNs</fullName>
        <columns>NAME</columns>
        <columns>Code_Dsp__c</columns>
        <columns>BBNSuccessiveNumber__c</columns>
        <columns>Flavour__c</columns>
        <columns>Trademark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 - Active BBNs</label>
    </listViews>
    <listViews>
        <fullName>X2_Inactive_BBNs</fullName>
        <columns>NAME</columns>
        <columns>Code_Dsp__c</columns>
        <columns>BBNSuccessiveNumber__c</columns>
        <columns>Flavour__c</columns>
        <columns>Trademark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2 - Inactive BBNs</label>
    </listViews>
    <nameField>
        <label>BBN Formula</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS1 BBNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>